# rules_rs

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  libtest_ref4_tmp  mise.toml  reexport_test_harness_main_tmp
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  publish.yaml
docs/: dylint.md
examples/dylint/: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  dylint_rules.bzl  dylint_runner.rs
rs/: BUILD.bazel  dylint.bzl  extensions.bzl  rules_rust.bzl  rules_rust_bindgen.bzl  rules_rust_prost.bzl  rules_rust_pyo3.bzl  rules_rust_reexported_extensions.bzl  rules_rust_wasm_bindgen.bzl  rust_binary.bzl  rust_crate.bzl  rust_library.bzl  rust_proc_macro.bzl  rust_shared_library.bzl  rust_static_library.bzl  rust_test.bzl
rs/experimental/: rules_rust.bzl  rules_rust_prost.bzl
rs/experimental/miri/: BUILD.bazel  miri_test.bzl
rs/experimental/miri/private/: BUILD.bazel  compile.bzl  declare_toolchains.bzl  miri_repository.bzl  miri_test_runner.rs  providers.bzl  sysroot.bzl  toolchain.bzl
rs/experimental/patches/: staticlib_exported_symbols.patch
rs/experimental/toolchains/: BUILD.bazel  declare_rustc_toolchains.bzl  module_extension.bzl  source_stdlib.bzl
rs/private/: BUILD.bazel  aliases.bzl  all_crate_deps.bzl  annotations.bzl  bindgen.bzl  bindgen_test.bzl  cargo_toml_utils.bzl  cargo_toml_utils_test.bzl  cargo_workspace_graph.bzl  cargo_workspace_graph_test.bzl  cfg_parser.bzl  cfg_parser_test.bzl  clippy_repository.bzl  crate_git_repository.bzl  crate_repository.bzl  default_lint_config_repository.bzl  downloader.bzl  dylint.bzl  git_cargo_workspace_repository.bzl  git_crate_metadata_repository.bzl  host_tools_repository.bzl  registry_config_repository.bzl  registry_utils.bzl  registry_utils_test.bzl  repository_utils.bzl  resolver.bzl  rust_repository_utils.bzl  rust_src_repository.bzl  rustc_dev_repository.bzl  rustc_repository.bzl  rustc_src_repository.bzl  rustc_with_dev_repository.bzl  rustfmt_repository.bzl  sanitize_rust_lld.bzl  select_utils.bzl  symlink_utils.bzl  toolchains_repository.bzl
rs/private/prost/: BUILD.bazel  Cargo.toml
rs/private/pyo3/: BUILD.bazel  Cargo.toml  empty.rs
rs/private/pyo3/patches/: BUILD.bazel
rs/private/rules_rust/patches/: BUILD.bazel  cross_crate_dep_env_out_dir.patch
rs/private/wasm_bindgen/: BUILD.bazel  Cargo.toml
rs/tests/: BUILD.bazel  rustdoc_musl_unwind.cc  rustdoc_musl_unwind.rs  rustdoc_musl_unwind_test.bzl
rs/toolchains/: BUILD.bazel  declare_bindgen_toolchains.bzl  declare_rust_analyzer_toolchains.bzl  declare_rustc_toolchains.bzl  declare_rustfmt_toolchains.bzl  module_extension.bzl  toolchain_utils.bzl
rs/toolchains/family/: BUILD.bazel
rs/toolchains/rustc_dev/: BUILD.bazel
test/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  aws-lc-sys-prebuilt.patch  aws_lc_openssl.rs  aws_lc_sys_test.rs  dylint-driver-bazel-env.patch  dylint-internal-rustc-env.patch  rules_rust-avoid-srcs-for-__crate.patch  rules_rust_build_script_tools.patch  run_binary.sh  rustc_dev_smoke.rs  rustc_dev_test.bzl  rustdoc_musl_unwind_test.bzl  systemd-codegen.patch  target_triple_constraints_test.bzl  verify_aliases.bzl
test/binary_only/: Cargo.toml
test/bindgen/: BUILD.bazel  coreaudio_sys_test.rs
test/build_exec_feature_split/: Cargo.toml
test/build_exec_feature_split/src/: lib.rs
test/cargo_manifest_path_env/: Cargo.toml
test/cargo_manifest_path_env/manifest_path_probe/: Cargo.toml  build.rs
test/cargo_manifest_path_env/manifest_path_probe/src/: lib.rs
test/cargo_manifest_path_env/src/: lib.rs
test/dylint/: BUILD.bazel  README.md  alpha_policy.rs  beta_policy.rs  component.rs  driver.rs  dylint.toml  verify_target_local_dylint_configs.sh
test/dylint/src/: lib.rs
test/extra_cfg_flags/: Cargo.toml
test/extra_cfg_flags/app/: Cargo.toml
test/extra_cfg_flags/app/src/: lib.rs
test/garage/: Cargo.toml
test/many_workspace_deps/: Cargo.toml
test/miri/: BUILD.bazel  expect_miri_failure.rs  miri_cfg_test.rs  miri_dep.rs  miri_dep_graph_test.rs  miri_detects_use_after_free.rs  miri_leaf.rs  miri_proc_macro.rs  miri_proc_macro_test.rs
test/proc_macro_sniff/: Cargo.toml
test/proc_macro_sniff/src/: lib.rs
test/prost/: BUILD.bazel  prost_smoke_test.rs
test/pyo3/: BUILD.bazel  pyo3_smoke.rs  pyo3_smoke_test.py
test/self_dev_dependency/: Cargo.toml
test/self_dev_dependency/mycrate/: BUILD.bazel  Cargo.toml
test/self_dev_dependency/mycrate/src/: lib.rs
test/shared_hub/logger/: Cargo.toml
test/shared_hub_child/: MODULE.bazel
test/shared_library_unwind/: BUILD.bazel  Cargo.toml  LoadFileWatcherJni.java  dlopen_test.c  filewatcher_jni.rs  unwind_link_test.sh
test/source_stdlib/: BUILD.bazel  core_only.rs  defs.bzl  main.rs  wasm64_alloc.rs
test/toolchain_opt_level/: BUILD.bazel  toolchain_opt_level_test.bzl
test/wasm_bindgen/: BUILD.bazel  wasm_bindgen_smoke.rs  wasm_bindgen_smoke_test.sh
test/workspace_default_features/app/: Cargo.toml
test/workspace_default_features/app/src/: lib.rs
test/workspace_git_dep/app/: Cargo.toml
test/workspace_git_dep/app/src/: lib.rs
tools/rust_analyzer/: BUILD.bazel  Cargo.toml  cargo_metadata_stub.rs  defs.bzl  flycheck.rs
