load("@package_metadata//licenses/rules:license.bzl", "license")
load("@package_metadata//purl:purl.bzl", "purl")
load("@package_metadata//rules:package_metadata.bzl", "package_metadata")

# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl
package_metadata(
    name = "package_metadata",
    purl = purl.bazel(
        module_name(),
        module_version(),
    ),
    visibility = ["//visibility:public"],
)

license(
    name = "license",
    kind = "@package_metadata//licenses/spdx:Apache-2.0",
    text = "LICENSE",
)

platform(
    name = "local_gnu_platform",
    constraint_values = [
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
)
