load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "rules_rust",
    srcs = ["rules_rust.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "rules_rust_prost",
    srcs = ["rules_rust_prost.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:local.bzl",
    ],
)

bzl_library(
    name = "rules_rust_reexported_extensions",
    srcs = ["rules_rust_reexported_extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rs/private:annotations",
        "//rs/private:cargo_credentials",
        "//rs/private:cargo_workspace_graph",
        "//rs/private:crate_repository",
        "//rs/private:downloader",
        "//rs/private:git_cargo_workspace_repository",
        "//rs/private:git_crate_metadata_repository",
        "//rs/private:lint_flags",
        "//rs/private:registry_config_repository",
        "//rs/private:registry_utils",
        "//rs/private:repository_utils",
        "//rs/private:toml2json",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_lib//lib:repo_utils",
        "@bazel_skylib//lib:paths",
        "@rs_rust_host_tools//:defs.bzl",
    ],
)

# TODO(zbarsky): Stardoc won't work here
filegroup(
    name = "rust_crate",
    srcs = ["rust_crate.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "cargo_build_script",
    srcs = ["cargo_build_script.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//cargo/private:bzl_lib",
    ],
)

bzl_library(
    name = "rust_binary",
    srcs = ["rust_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "rust_library",
    srcs = ["rust_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "rust_proc_macro",
    srcs = ["rust_proc_macro.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "rust_test",
    srcs = ["rust_test.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "rust_shared_library",
    srcs = ["rust_shared_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)

bzl_library(
    name = "rust_static_library",
    srcs = ["rust_static_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)
