load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

alias(
    name = "all_targets",
    actual = select({
        "@rules_rust//rust/private:bootstrapped": "@rules_rust//rust/private:bootstrapped",
        "//conditions:default": "@rules_rust//rust/private:bootstrapping",
    }),
    visibility = ["//visibility:private"],
)

alias(
    name = "bpf_targets",
    actual = select({
        "//rs/platforms/config:bpfeb-unknown-none": "//rs/platforms/config:bpfeb-unknown-none",
        "//rs/platforms/config:bpfel-unknown-none": "//rs/platforms/config:bpfel-unknown-none",
        # Select bpfeb-unknown-none so bpf_targets does not match any other target.
        "//conditions:default": "//rs/platforms/config:bpfeb-unknown-none",
    }),
)

alias(
    name = "non_bpf_targets",
    actual = select({
        # Select the opposite BPF config setting so non_bpf_targets does not
        # match either BPF target.
        "//rs/platforms/config:bpfeb-unknown-none": "//rs/platforms/config:bpfel-unknown-none",
        "//rs/platforms/config:bpfel-unknown-none": "//rs/platforms/config:bpfeb-unknown-none",
        "//conditions:default": ":all_targets",
    }),
)

bzl_library(
    name = "declare_rustc_toolchains",
    srcs = ["declare_rustc_toolchains.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/platforms:triples",
        "//rs/private:bpf_linker_repository",
        "@rules_rust//rust:bzl_lib",
        "@rules_rust//rust/platform:bzl_lib",
    ],
)

bzl_library(
    name = "declare_rust_analyzer_toolchains",
    srcs = ["declare_rust_analyzer_toolchains.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/platforms:triples",
        "@rules_rust//rust:bzl_lib",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "declare_rustfmt_toolchains",
    srcs = ["declare_rustfmt_toolchains.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/platforms:triples",
        "@rules_rust//rust:bzl_lib",
        "@rules_rust//rust/platform:bzl_lib",
    ],
)

bzl_library(
    name = "module_extension",
    srcs = ["module_extension.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/experimental/miri/private:miri_repository",
        "//rs/platforms:triples",
        "//rs/private:bpf_linker_repository",
        "//rs/private:cargo_repository",
        "//rs/private:clippy_repository",
        "//rs/private:host_tools_repository",
        "//rs/private:rust_analyzer_repository",
        "//rs/private:rust_repository_utils",
        "//rs/private:rust_src_repository",
        "//rs/private:rustc_repository",
        "//rs/private:rustc_src_repository",
        "//rs/private:rustfmt_repository",
        "//rs/private:stdlib_repository",
        "//rs/private:toolchains_repository",
        "@bazel_features//:features",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "toolchain_utils",
    srcs = ["toolchain_utils.bzl"],
)
