[package]
name = "rules_rs_rust_analyzer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "cargo_metadata_stub.rs"

[dependencies]
anyhow = "=1.0.71"
camino = { version = "=1.1.9", features = ["serde1"] }
clap = { version = "=4.3.11", features = ["derive", "env"] }
env_logger = "=0.10.0"
itertools = "=0.11.0"
log = "=0.4.19"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "=1.0.102"
