load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_rust//extensions/prost:defs.bzl", "rust_prost_toolchain")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library_group")

package(default_visibility = ["//visibility:public"])

PROST_RUST_EDITION = "2021"

exports_files([
    "Cargo.lock",
    "Cargo.toml",
])

[
    alias(
        name = name,
        actual = "@rrprd//:" + name,
    )
    for name in [
        "h2",
        "prost",
        "prost-types",
        "protoc-gen-prost__protoc-gen-prost",
        "protoc-gen-tonic__protoc-gen-tonic",
        "tokio",
        "tokio-stream",
        "tonic",
        "tonic-prost",
    ]
]

bool_flag(
    name = "compile_well_known_types",
    build_setting_default = True,
)

config_setting(
    name = "compile_well_known_types_setting",
    flag_values = {
        ":compile_well_known_types": "true",
    },
)

rust_binary(
    name = "protoc_wrapper",
    srcs = ["@rules_rust//extensions/prost/private:protoc_wrapper.rs"],
    edition = PROST_RUST_EDITION,
    tags = ["manual"],
    deps = [
        "@rrprd//:heck-0.5.0",
        "@rrprd//:prost",
        "@rrprd//:prost-types",
    ],
)

rust_library_group(
    name = "prost_runtime",
    tags = ["manual"],
    deps = [
        "@rrprd//:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    tags = ["manual"],
    deps = [
        ":prost_runtime",
        "@rrprd//:tonic",
        "@rrprd//:tonic-prost",
    ],
)

rust_prost_toolchain(
    name = "default_prost_toolchain_impl",
    compile_well_known_types = select({
        ":compile_well_known_types_setting": True,
        "//conditions:default": False,
    }),
    prost_plugin = "@rrprd//:protoc-gen-prost__protoc-gen-prost",
    prost_plugin_flag = "--plugin=protoc-gen-prost=%s",
    prost_runtime = ":prost_runtime",
    prost_types = "@rrprd//:prost-types",
    tags = ["manual"],
    tonic_plugin = "@rrprd//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_plugin_flag = "--plugin=protoc-gen-tonic=%s",
    tonic_runtime = ":tonic_runtime",
)
