[package]
name = "direct-cargo-bazel-deps"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
h2 = "=0.4.13"
prost = "=0.14.3"
prost-types = "=0.14.3"
protoc-gen-prost = "=0.5.0"
protoc-gen-tonic = "=0.5.0"
tokio = { version = "=1.50.0", features = ["full"] }
tokio-stream = "=0.1.18"
tonic = "=0.14.5"
tonic-prost = "=0.14.5"
